# watchy_tick_rs

./: .gitignore  Cargo.toml
release/: watchy_tick.service  watchy_tick.timer
src/: add_to_index.rs  aggs.rs  app.rs  elastic.rs  filter.rs  init_logging.rs  main.rs  message.rs
