[package]
name = "watchy_tick_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
color-eyre = "0.6.3"
directories = "5.0.1"
elasticsearch = "8.5.0-alpha.1"
lazy_static = "1.4.0"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["rustls-tls"] }
rustls = "0.23.5"
rustls-pemfile = "2.1.2"
webpki = "0.22.4"
dotenv = "0.15.0"
serde_json = "1.0.115"
time = "0.3.34"
tokio = { version = "*", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde", "fmt", "std", "time","local-time", "chrono"] }
url = "2.5.0"
serde = "1.0.200"
#futures-util = "*"

